--- a/.github/workflow/pipeline.yml
+++ b/.github/workflow/pipeline.yml
@@ -51,3 +51,5 @@ jobs:
       - name: Deploy to EKS
         run: |
           kubectl apply -f k8s/deployment.yaml
+          kubectl apply -f k8s/service.yaml
+          kubectl apply -f k8s/ingress.yaml
