--- a/code/meme-generator/kubernetes/deployment.yaml
+++ b/code/meme-generator/kubernetes/deployment.yaml
@@ -12,7 +12,7 @@ spec:
   template:
     metadata:
       labels:
-        app: meme-Deployment
+        app: meme-Deployment #
     spec:
       containers:
         - name: meme-app
