--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -50,6 +50,6 @@ jobs:
 
       - name: Deploy to EKS
         run: |
-          kubectl apply -f k8s/deployment.yaml
-          kubectl apply -f k8s/service.yaml
-          kubectl apply -f k8s/ingress.yaml
+          kubectl apply -f code/meme-generator/kubernetes/deployment.yaml
+          kubectl apply -f code/meme-generator/kubernetes/service.yaml
+          kubectl apply -f code/meme-generator/kubernetes/ingress.yaml
